--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
   --success: #5FBB2D;
   --warning: #FFBF47;
   --error: #BA2732;
-  --grey: inear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #EAEAEA;
+  --grey: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #EAEAEA;
 }
 
 /* Global */
@@ -61,6 +61,10 @@ body {
   background-color: #8fbd35;
 }
 
+.page {
+  height: 100%;
+}
+
 .page a {
   text-decoration: none;
 }
@@ -70,9 +74,41 @@ img {
   height: auto;
 }
 
+.page-body {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
+}
+
 /* Main menu */
 
+.main-header {
+  margin-bottom: 59px;
+}
+
 .main-menu {
+  background-color: var(--basic-ferrara-blue);
+}
+
+
+.main-container-wrapper {
+  background-color: var(--basic-ferrara-blue);
+}
+
+.main-menu,
+.main-info,
+.main-navigation {
+  display: grid;
+  width: 940px;
+  margin: 0 auto;
+}
+
+.main-info-wrapper {
+  background-color: var(--basic-white-grey);
+}
+
+.main-navigation {
   background-color: var(--basic-ferrara-blue);
 }
 
@@ -94,6 +130,8 @@ img {
   color: var(--basic-white);
   font-size: 16px;
   line-height: 20px;
+  margin: 0;
+  padding: 0;
 }
 
 .site-navigation li:hover {
@@ -106,7 +144,9 @@ img {
   opacity: 0.5;
 }
 
-
+.main-info {
+  background-color: var(--basic-white-grey);
+}
 
 .main-header a {
   color: var(--basic-white);
@@ -128,17 +168,21 @@ img {
   fill: red;
 }
 
-.main-menu-items li:nth-child(2):active,
-.main-menu-items li:nth-child(3):active,
-.main-menu-items span:nth-child(2):active {
+.visually-hidden {
+ display: none;
+}
+
+.item-bookmark:active,
+.item-cart:active,
+.item-bookmark span:active {
   background-color: var(--basic-black-grey);
   color: var(--basic-grey-white);
 }
 
-.main-menu-items input:nth-child(1):focus {
-  background-color: white;
-  color: white;
-  border-color: white;
+.item-search input:focus {
+  background-color: var(--basic-white);
+  color: var(--basic-grey-white);
+  border-color: var(--basic-white);
 }
 
 .main-menu-items li:focus svg {
@@ -216,25 +260,41 @@ img {
 
 /* Main-container */
 
-.features-list {
-  list-style: none;
+.container {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
-.feature-item {
-  width: 300px;
+.features {
+  margin-bottom: 59px;
+}
+
+.container ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.slider-item {
+  grid-row: 2 / 4;
+  grid-column: 1 / 3;
+}
+
+.features-list {
+  display: grid;
+  grid-template-columns: 300px 300px 300px;
+  grid-template-rows: 123px 123px 123px;
+  grid-gap: 20px;
+}
+
+.features-list li{
+  display: flex;
 }
 
 .features-list h3 {
   font-size: 24px;
   line-height: 30px;
-}
-
-.feature-item p:hover {
-  background-color: var(--basic-grey-opacity);
-}
-
-.feature-item p:active {
-  background-color: var(--basic-dark-opacity);
 }
 
 .features-list p {
@@ -245,23 +305,40 @@ img {
   line-height: 18px;
 }
 
-.features-list li:nth-child(1) {
+.feature-item {
+  padding: 10px;
+}
+
+.feature-item p{
+  width: 135px;
+}
+
+.feature-item p:hover {
+  background-color: var(--basic-grey-opacity);
+}
+
+.feature-item p:active {
+  background-color: var(--basic-dark-opacity);
+}
+
+
+.feature-item-materials {
   background-color: var(--warning);
 }
 
-.features-list li:nth-child(2) {
+.feature-item-drill {
   background-color: var(--basic-blue);
 }
 
-.features-list li:nth-child(3) {
+.feature-item-tractor {
   background-color: var(--basic-turquoise);
 }
 
-.features-list li:nth-child(4) {
+.feature-item-truck {
   background-color: var(--basic-khaki);
 }
 
-.features-list li:nth-child(5) {
+.feature-item-car {
   background-color: var(--warning);
 }
 
@@ -290,10 +367,32 @@ img {
 
 /* products */
 
+.products {
+  margin-bottom: 70px;
+}
+
+.products-items {
+  display: grid;
+  grid-template-columns: 220px 220px 220px 220px;
+  grid-gap: 20px;
+}
+
+
+.heder-items {
+  display: grid;
+  grid-template-columns: 1fr min-content;
+  grid-template-rows: 89px;
+}
+
 .heder-items {
   background-color: var(--special-grey-dark);
   color: var(--basic-greylight-light);
   text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.products-items-wrapper {
+  background-color: var(--basic-white);
 }
 
 .heder-items p{
@@ -302,12 +401,24 @@ img {
 
 .products-item,
 .firms-item {
+  margin: 0px;
   list-style: none;
   font-family: "PT Sans", Arial, sans-serif;
+  border: 1px solid var(--basic-white-matt);
+}
+
+.firms-items {
+  display: grid;
+  grid-template-columns: 220px 220px 220px 220px;
+  grid-gap: 20px;
 }
 
 .firms-item img {
   border: 1px solid var(--basic-white-matt);
+}
+
+.firms-items-wrapper {
+  background-color: var(--basic-white);
 }
 
 .products-item h3 {
@@ -331,8 +442,24 @@ img {
 
 /* services */
 
+
+
 .services {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   background-color: var(--basic-background);
+}
+
+.service-block-delivery {
+  display: flex;
+}
+
+.services-title {
+  color: var(--basic-black-dark);
+  font-weight: normal;
+  grid-column: 1 / -1;
+  grid-row: 1 / 2;
 }
 
 .services-form label {
@@ -363,7 +490,14 @@ img {
 
 /* company-info */
 .company-info {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   color: var(--basic-black-dark);
+  background-color: var(--basic-white);;
+}
+
+.company-info div {
+  margin: 0 auto;
 }
 
 .company-info div h2 {
@@ -384,8 +518,16 @@ img {
 
 /* footer */
 
+.page-footer-wrapper {
+  width: 940px;
+  margin: 0 auto;
+}
+
 .footer-info {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
   background-color: var(--basic-greylight-light);
+  padding-left: 130px;
 }
 
 .page-footer li {
@@ -422,7 +564,10 @@ img {
 
 /* footer-bottom */
 .footer-bottom {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
   background-color: var(--basic-ferrara-blue);
+  padding-left: 130px;
 }
 
 .footer-bottom a {
